--- a/scss/main.scss
+++ b/scss/main.scss
@@ -123,7 +123,7 @@ main {
 
   img {
     width: 100%;
-    border: 3px #fff solid;
+    border: 3px rgb(189, 19, 19) solid;
 
     &:hover {
       opacity: 0.5;
